--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ep_prometheus_exporter",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Adds a prometheus exporter on /metrics",
   "repository": {
     "type": "git",
-    "url": "https://framagit.org/pichouk/ep_prometheus_exporter.git"
+    "url": "https://github.com/pichouk/ep_prometheus_exporter"
   },
   "author": "Kyâne Pichou",
   "license": "GPL-3.0-or-later"
